--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,11 @@ dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
     
-    // https://mvnrepository.com/artifact/org.apache.tika/tika-core
-	compile group: 'org.apache.tika', name: 'tika-core', version: '1.14'
+    // https://mvnrepository.com/artifact/org/jaudiotagger
+	compile group: 'org', name: 'jaudiotagger', version: '2.0.3'
+	
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
