--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+
+	// https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all
+	testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 }
