--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,12 @@ dependencies {
     
     // https://mvnrepository.com/artifact/org/jaudiotagger
 	compile group: 'org', name: 'jaudiotagger', version: '2.0.3'
-	
+
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+
+	// https://mvnrepository.com/artifact/commons-io/commons-io
+	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
