--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 apply plugin: 'application'
 mainClassName = "com.billhillapps.audiomerge.ui.AudioMergeUI"
 
-task buildJar(type: Jar) {
+task fatJar(type: Jar) {
 	manifest {
 		attributes 'Implementation-Title': project.name,
 			'Implementation-Version': version,
@@ -44,4 +44,5 @@ task buildJar(type: Jar) {
 	baseName = project.name + '-all'
 	from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
+    logger.lifecycle('Fat jar ' + archiveName + ' has been created in ' + destinationDir)
 }
